Fix spacing issues, add <p> separators

--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,70 @@ video {
   right: 2.5rem;
 }
 
+.-left-16 {
+  left: -4rem;
+}
+
+.-left-3 {
+  left: -0.75rem;
+}
+
+.-left-10 {
+  left: -2.5rem;
+}
+
+.-top-1\/2 {
+  top: -50%;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.-left-12 {
+  left: -3rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.-bottom-12 {
+  bottom: -3rem;
+}
+
+.bottom-12 {
+  bottom: 3rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.-left-14 {
+  left: -3.5rem;
+}
+
+.-left-8 {
+  left: -2rem;
+}
+
+.-left-2 {
+  left: -0.5rem;
+}
+
+.-left-1\.5 {
+  left: -0.375rem;
+}
+
+.-left-1 {
+  left: -0.25rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -655,12 +719,36 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -687,8 +775,8 @@ video {
   height: 0px;
 }
 
-.h-4\/6 {
-  height: 66.666667%;
+.h-5\/6 {
+  height: 83.333333%;
 }
 
 .h-big {
@@ -706,6 +794,10 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-1 {
+  height: 0.25rem;
 }
 
 .w-full {
@@ -741,8 +833,17 @@ video {
   width: 4rem;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .max-w-screen-md {
   max-width: 768px;
+}
+
+.-rotate-90 {
+  --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -807,6 +908,14 @@ video {
   gap: 1.75rem;
 }
 
+.gap-16 {
+  gap: 4rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2.5rem * var(--tw-space-x-reverse));
@@ -817,6 +926,10 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
+.self-center {
+  align-self: center;
 }
 
 .overflow-hidden {
@@ -970,12 +1083,20 @@ video {
   padding-top: 8rem;
 }
 
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
 .pb-3 {
   padding-bottom: 0.75rem;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 .font-nunito {
@@ -991,6 +1112,11 @@ video {
   line-height: 2rem;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -999,11 +1125,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -1020,6 +1141,26 @@ video {
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
+.tracking-widest {
+  letter-spacing: 0.1em;
+}
+
+.tracking-\[0\.2\] {
+  letter-spacing: 0.2;
+}
+
+.tracking-\[0\.2em\] {
+  letter-spacing: 0.2em;
+}
+
+.tracking-\[0\.15em\] {
+  letter-spacing: 0.15em;
 }
 
 .text-indigo-400 {
@@ -1050,6 +1191,11 @@ video {
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .text-gray-800 {
@@ -1262,10 +1408,6 @@ html,body {
     margin: 0px;
   }
 
-  .sm\:h-5\/6 {
-    height: 83.333333%;
-  }
-
   .sm\:p-0 {
     padding: 0px;
   }
@@ -1322,6 +1464,10 @@ html,body {
     margin-top: 8rem;
   }
 
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:inline {
     display: inline;
   }
@@ -1372,8 +1518,8 @@ html,body {
     height: 83.333333%;
   }
 
-  .xl\:text-7xl {
-    font-size: 4.5rem;
+  .xl\:text-8xl {
+    font-size: 6rem;
     line-height: 1;
   }
 
